@@ -3,6 +3,7 @@ version = 0.0403
 author  = JT Smith <RIZEN@cpan.org>
 license = Perl_5
 copyright_holder = Plain Black Corporation
+copyright_year = 2010
 
 [@Classic]
 
